GearsetPOC/force-app/main/default/objects/DLT_Settings__c/DLT_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Delta Settings</label>
</CustomObject>