GearsetPOC/force-app/main/default/objects/DLT_Settings__c/fields/Business_Account_Hierarchy_Depth__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Hierarchy_Depth__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Indicates for how many levels in the Business Account hierarchy values will be propagated to children Business Account.</description>
    <inlineHelpText>Indicates for how many levels in the Business Account hierarchy values will be propagated to children Business Account.</inlineHelpText>
    <label>Business Account Hierarchy Depth</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>