GearsetPOC/force-app/main/default/objects/DLT_Settings__c/fields/Case_Email_Service_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Case_Email_Service_Email_Template__c</fullName>
    <defaultValue>&#39;EmailWithoutThreadId&#39;</defaultValue>
    <label>Case Email Service Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>