GearsetPOC/force-app/main/default/objects/DLT_Settings__c/fields/Eurostar_Customer_Care_OrgWideEmail_Name__c.field-meta.xml
<CustomField>
    <fullName>Eurostar_Customer_Care_OrgWideEmail_Name__c</fullName>
    <defaultValue>&#39;Eurostar Customer Care&#39;</defaultValue>
    <label>Eurostar Customer Care OrgWideEmail Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>