GearsetPOC/force-app/main/default/objects/DLT_Settings__c/fields/Eurostar_for_Agents_OrgWideEmail_Name__c.field-meta.xml
<CustomField>
    <fullName>Eurostar_for_Agents_OrgWideEmail_Name__c</fullName>
    <defaultValue>&#39;Eurostar_for_Agents&#39;</defaultValue>
    <label>Eurostar For Agents OrgWideEmail Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>