GearsetPOC/force-app/main/default/objects/DLT_Settings__c/fields/Hide_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Hide_Milestones__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Milestones</label>
    <type>Checkbox</type>
</CustomField>