GearsetPOC/force-app/main/default/objects/DLT_Settings__c/fields/MassHandle_Case_Close_ByPass__c.field-meta.xml
<CustomField>
    <fullName>MassHandle_Case_Close_ByPass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Mass Handle Simple Cases functionality - checking this checkbox results in sending emails WITHOUT closing the cases</description>
    <inlineHelpText>Used in Mass Handle Simple Cases functionality - checking this checkbox results in sending emails WITHOUT closing the cases
FALSE - sends emails and close cases
TRUE - only sends emails</inlineHelpText>
    <label>MassHandle Case Close ByPass</label>
    <type>Checkbox</type>
</CustomField>