GearsetPOC/force-app/main/default/objects/DLT_Settings__c/fields/PDF_Generator_Secret__c.field-meta.xml
<CustomField>
    <fullName>PDF_Generator_Secret__c</fullName>
    <description>The secret that supposed to be encrypted and used as an additional parameter from the Eurostar.com side to make public PDF pages secure.</description>
    <label>PDF Generator Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>