GearsetPOC/force-app/main/default/objects/DLT_Settings__c/fields/PDF_Travel_Proof_From_Email__c.field-meta.xml
<CustomField>
    <fullName>PDF_Travel_Proof_From_Email__c</fullName>
    <defaultValue>&quot;casereply@eurostar.com&quot;</defaultValue>
    <description>The Org-Wide email address uses for the Travel Proof emails/documents.

Metadata: PDF_Generator_Travel_Proof.page, DLT_TravelProofBatch.cls.</description>
    <inlineHelpText>The Org-Wide email address uses for the Travel Proof emails/documents.</inlineHelpText>
    <label>PDF Travel Proof From Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>